// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="select_4"
>
  <div
    class="circuit-2"
    disabled=""
  >
    <select
      class="circuit-0"
      disabled=""
      id="select_4"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
  padding-left: 40px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<label
  class="circuit-3"
  for="select_8"
>
  <div
    class="circuit-2"
  >
    <div
      style="width: 24px; height: 24px;"
    />
    <select
      class="circuit-0"
      id="select_8"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 31;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  right: 50%;
  right: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  right: 1px;
}

.circuit-2::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-2::after {
  right: 12px;
}

.circuit-2::after {
  top: 100%;
  border-top-color: #212933;
}

<label
  class="circuit-4"
  for="select_7"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_7"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="circuit-2"
    >
      This field is required.
    </div>
  </div>
</label>
`;

exports[`Select should render with default styles 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

<label
  class="circuit-3"
  for="select_1"
>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-0"
      id="select_1"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="select_2"
>
  <div
    class="circuit-2"
    disabled=""
  >
    <select
      class="circuit-0"
      disabled=""
      id="select_2"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with inline styles when passed the inline prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="select_5"
>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-0"
      id="select_5"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
  border-color: #EA7A7A;
  padding-right: 56px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
  right: calc(1px + 24px);
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
  color: #DB4D4D;
}

<label
  class="circuit-4"
  for="select_3"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_3"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_cross_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_cross_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</label>
`;

exports[`Select should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-3 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding-top: 8px;
  padding-right: 32px;
  padding-bottom: 8px;
  padding-left: 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-3"
  for="select_6"
>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-0"
      id="select_6"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;
